--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,11 @@
+# editorconfig.org
 root = true
 
+# default settings
 [*]
-indent_style = space
-indent_size = 2
 charset = utf-8
-trim_trailing_whitespace = true
 insert_final_newline = true
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+quote_type = single
